Fix button text not centered

--- a/client/src/common/Button.module.css
+++ b/client/src/common/Button.module.css
@@ -3,6 +3,7 @@
   position: relative;
   display: inline-flex;
   align-items: center;
+  justify-content: center;
   font-weight: 400;
   white-space: nowrap;
   text-align: center;
